# aggrewell-organoid

./: .gitignore  README.md  pyproject.toml
src/aggrewell_organoid/: __init__.py  cli.py  crop_wells.py  infer_organoids.py
