[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aggrewell-organoid"
version = "1.0.0"
description = "Automated organoid area measurement from AggreWell plate images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0",
    "opencv-python-headless>=4.7",
    "openpyxl>=3.0",
    "scipy>=1.10",
    "numpy>=1.23",
]

[project.scripts]
aggrewell-organoid = "aggrewell_organoid.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aggrewell_organoid = ["models/*.pt"]
